--- a/run-summary.html
+++ b/run-summary.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --orange: #fdba74; /* pastel orange */
+      --orange: #f97316; /* pastel orange */
       --green:  #86efac; /* pastel green  */
       --red:    #fca5a5; /* pastel red    */
       --lavender: #e9d5ff; /* pastel lavender replacing blue */
