--- a/run-tests-2.html
+++ b/run-tests-2.html
@@ -101,7 +101,7 @@
 
     <!-- Illustration -->
     <div class="image">
-      <img src="https://keploy-devrel.s3.us-west-2.amazonaws.com/run_tests_followup.png"
+      <img src="https://keploy-devrel.s3.us-west-2.amazonaws.com/run_tests_2.png"
            alt="Run tests illustration" />
     </div>
 
