--- a/testrun-notshared.html
+++ b/testrun-notshared.html
@@ -96,6 +96,15 @@
       Great job running your test suite 🎉 But don't stop there — share your test results so others can collaborate, review, and make improvements. Sharing helps drive visibility and faster feedback loops.
     </div>
 
+     <div style="text-align:left; margin: 0 0 32px;">
+      <!-- Replace the src below with your actual AWS S3 URL -->
+      <img
+        src="https://keploy-devrel.s3.us-west-2.amazonaws.com/share-it.png"
+        alt="Rabbit illustration encouraging you to share test results"
+        style="max-width: 480px; width: 100%; border-radius: 12px;"
+      />
+    </div>
+
     <a href="https://app.keploy.io/share-results" class="cta-button">Share My Test Report</a>
 
     <div class="footer">
