--- a/run-summary.html
+++ b/run-summary.html
@@ -11,7 +11,7 @@
       --green:  #86efac; /* pastel green  */
       --red:    #fca5a5; /* pastel red    */
       --lavender: #e9d5ff; /* pastel lavender replacing blue */
-      --text-primary: #1f2937;
+      --text-primary: 1f2937;
       --text-secondary: #4b5563;
     }
 
