--- a/run-tests-2.html
+++ b/run-tests-2.html
@@ -83,7 +83,7 @@
     <img class="logo" src="https://keploy-devrel.s3.us-west-2.amazonaws.com/keploy-logo+(1).png" alt="Keploy Logo" />
 
     <!-- Headline -->
-    <div class="headline">Still haven’t pressed “Run”?</div>
+    <div class="headline">Your test suites are waiting for execution</div>
 
     <!-- Message -->
     <p class="body-text">
