--- a/sign-not-gen-2.html
+++ b/sign-not-gen-2.html
@@ -3,132 +3,84 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Still need help generating tests?</title>
+  <title>Your first Keploy tests are waiting</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    /* Core styles (unchanged) */
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f8fafc;
-      margin: 0;
-      padding: 0;
-      color: #1f2937;
-    }
-    .container {
-      max-width: 640px;
-      margin: 0 auto;
-      background: #ffffff;
-      padding: 48px 32px;
-      border-radius: 16px;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.07);
-      text-align: left;
-    }
-    .header { margin-bottom: 24px; }
-    .header img { width: 120px; }
-
-    /* Updated headline + text */
-    .headline {
-      font-size: 24px;
-      font-weight: 600;
-      color: #f97316;
-      margin-top: 24px;
-    }
-    .body-text {
-      font-size: 15px;
-      line-height: 1.7;
-      margin: 20px 0;
-      color: #374151;
-    }
-
-    /* Checklist / steps */
-    .checklist { padding-left: 18px; margin-bottom: 24px; }
-    .li { margin-top: 20px; }
-
-    /* CTAs */
-    .cta-button {
-      display: inline-block;
-      padding: 14px 24px;
-      background-color: #f97316;
-      color: #ffffff;
-      font-weight: 600;
-      text-decoration: none;
-      border-radius: 8px;
-      margin-top: 12px;
-    }
-
-    /* Visual */
-    .visual { margin-top: 32px; text-align: left; }
-    .visual img {
-      max-width: 60%;
-      border-radius: 12px;
-    }
-
-    /* Footer */
-    .footer {
-      margin-top: 40px;
-      font-size: 12px;
-      color: #6b7280;
-      text-align: left;
-    }
-    .footer a {
-      color: #6b7280;
-      text-decoration: none;
-      font-weight: 500;
-      margin: 0 8px;
+    /* ===== Base ===== */
+    body{margin:0;padding:0;font-family:'Inter',sans-serif;background:#f8fafc;color:#1f2937;}
+    .wrapper{max-width:640px;margin:0 auto;background:#ffffff;padding:48px 36px;border-radius:18px;
+             box-shadow:0 6px 20px rgba(0,0,0,0.08);}
+    a{color:#f97316;text-decoration:none;font-weight:600;}
+    /* ===== Head ===== */
+    .logo{width:120px;}
+    .headline{font-size:26px;font-weight:600;color:#f97316;margin:24px 0 14px;}
+    .sub{font-size:16px;line-height:1.6;margin:0 0 24px;color:#374151;}
+    /* ===== Progress bar ===== */
+    .bar-wrap{background:#f3f4f6;border-radius:10px;margin:24px 0;height:14px;overflow:hidden;}
+    .bar{background:#f97316;width:75%;height:100%;border-radius:10px;}
+    .bar-text{font-size:13px;font-weight:600;color:#374151;margin:6px 0 0; text-align:right;}
+    /* ===== CTA ===== */
+    .button{display:inline-block;background:#f97316;color:#ffffff;border-radius:10px;padding:16px 28px;
+            font-weight:600;font-size:15px;margin:16px 0 32px;}
+    /* ===== Footer ===== */
+    .footer{font-size:12px;color:#6b7280;margin-top:40px;text-align:left;}
+    .footer a{color:#6b7280;font-weight:500;margin:0 8px;}
+    /* ===== Responsive ===== */
+    @media(max-width:480px){
+      .wrapper{padding:32px 22px;}
+      .headline{font-size:22px;}
+      .button{width:100%;text-align:center;}
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <!-- Brand -->
-    <div class="header">
-      <img src="https://keploy-devrel.s3.us-west-2.amazonaws.com/keploy-logo+(1).png" alt="Keploy Logo" />
-    </div>
+  <div class="wrapper">
+    <!-- Logo -->
+    <img class="logo" src="https://keploy-devrel.s3.us-west-2.amazonaws.com/keploy-logo+(1).png" alt="Keploy Logo"/>
 
-    <!-- New headline -->
-    <div class="headline">Still need a hand?</div>
+    <!-- Greeting -->
+    <p class="sub">Hey&nbsp;{{customer.name}},</p>
 
-    <!-- Updated message -->
-    <p class="body-text">
-      Just checking in after our last note. We noticed tests still haven’t appeared in your project.
-      No worries—let’s get your first suite up and running together. Most teams are unblocked in
-      under 5 minutes with the steps below.
+    <!-- Headline -->
+    <div class="headline">Catch bugs <em>before</em> they ship 🚀</div>
+
+    <!-- Hook -->
+    <p class="sub">
+      We still don’t see tests running in. Our tests
+      spot silent failures long before your users do—saving hours of hot-patch panic.
     </p>
 
-    <!-- Visual remains -->
-    <div class="visual">
-      <img src="https://keploy-devrel.s3.us-west-2.amazonaws.com/keploy_Test_Not_Generated.png" alt="Keploy Mascot" />
-    </div>
-
-    <!-- Revised quick-start checklist -->
-    <p class="body-text" style="margin-top:24px;">Quick win checklist:</p>
-    <ul class="checklist">
-      <li class="li">✅ Point Keploy to the <strong>exact API base URL</strong> (e.g. <code>https://api.myapp.com</code>).</li>
-      <li class="li">✅ Run <code>Generate Tests</code> after adding your schema and cURLs</li>
-    </ul>
-
-    <!-- Primary CTA -->
-    <a href="{app_url}" class="cta-button">Generate tests now</a>
-
-    <!-- Secondary resources -->
-    <p class="body-text" style="margin-top: 18px;">
-      Need to dig deeper? <a href="https://keploy.io/docs/running-keploy/generate-api-tests-using-ai/" style="color:#f97316;font-weight:600;">Read the docs</a>
+    <!-- Micro-story social proof -->
+    <p class="sub" style="border-left:4px solid #f97316;padding-left:12px;margin-top:0;">
+      “Keploy flagged a breaking auth bug minutes after deploy—saved our Friday night.”<br/>
+      <span style="font-size:14px;">— Abdul, Backend Lead</span>
     </p>
 
-    <!-- Support options -->
-    <p class="body-text" style="margin-top: 12px;">
-      Still stuck? <a href="https://join.slack.com/t/keploy/shared_invite/zt-357qqm9b5-PbZRVu3Yt2rJIa6ofrwWNg" style="color:#f97316;font-weight:600;">Chat with us</a>
-      or <a href="https://calendar.app.google/cXVaj6hbMUjvmrnt9" style="color:#f97316;font-weight:600;">book a quick call</a>.
+    <!-- Progress bar -->
+    <div class="bar-wrap"><div class="bar"></div></div>
+    <div class="bar-text">1 minute left to complete setup</div>
+
+    <!-- CTA -->
+    <a href="https://app.keploy.io/api-testing/tr" class="button">Finish &amp; generate my tests</a>
+
+    <!-- Help line -->
+    <p class="sub" style="margin-top:0;">
+      Stuck? Reply to this email, hop into our <a href="https://join.slack.com/t/keploy/shared_invite/zt-357qqm9b5-PbZRVu3Yt2rJIa6ofrwWNg">Slack</a>,
+      or book a <a href="https://calendar.app.google/cXVaj6hbMUjvmrnt9">15 min call</a>. We’ll walk you through live.
+    </p>
+
+    <!-- P.S. -->
+    <p class="sub" style="font-size:14px;">
+      <strong>P.S.</strong> If you click and it still takes more than 3 min,
+      we’ll gladly finish setup for you—free. Just let us know!
     </p>
 
     <!-- Footer -->
     <div class="footer">
-      <p>Keploy is open-source, AI-powered testing for developers.</p>
-      <p style="margin: 0;">
-        <a style="margin-left: 0" href="https://keploy.io">keploy.io</a> |
-        <a href="https://twitter.com/keployio">@keployio</a> |
-        <a href="https://linkedin.com/company/keploy/">LinkedIn</a>
-      </p>
+      Keploy · Open-source, AI-powered testing for developers.<br/>
+      <a href="https://keploy.io">keploy.io</a> |
+      <a href="https://twitter.com/keployio">@keployio</a> |
+      <a href="https://linkedin.com/company/keploy/">LinkedIn</a>
     </div>
   </div>
 </body>
