--- a/testrun-notshared.html
+++ b/testrun-notshared.html
@@ -22,13 +22,18 @@
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.06);
       text-align: left;
     }
-    .header {
-      text-align: left;
-      margin-bottom: 24px;
-    }
-    .header img {
+    .header img.logo {
       max-width: 160px;
       margin-bottom: 16px;
+    }
+    /* NEW hero illustration */
+    .hero {
+      margin: 32px 0 16px;
+      text-align: center;
+    }
+    .hero img {
+      max-width: 100%;
+      border-radius: 12px;
     }
     .headline {
       font-size: 26px;
@@ -87,9 +92,14 @@
 <body>
   <div class="email-wrapper">
     <div class="header">
-      <img src="https://keploy-devrel.s3.us-west-2.amazonaws.com/keploy-logo+(1).png" alt="Keploy Logo" />
+      <img src="https://keploy-devrel.s3.us-west-2.amazonaws.com/keploy-logo+(1).png" alt="Keploy Logo" class="logo" />
       <div class="headline">You're Almost There!</div>
       <div class="subheadline">You ran your first test — now let the team in on it!</div>
+    </div>
+
+    <!-- Hero illustration -->
+    <div class="hero">
+      <img src="https://keploy-devrel.s3.us-west-2.amazonaws.com/share-teaching.png" alt="Bunnies teaching illustration" />
     </div>
 
     <div class="message">
