--- a/buggy.html
+++ b/buggy.html
@@ -468,8 +468,8 @@
                 alt="Keploy Logo"
                 class="logo"
             />
-            <h1 class="header-title">Critical Issues Detected</h1>
-           
+            <h1 class="header-title">[P0] [Critical] Service {{appname}} has bugs in env:prod</h1>
+
         </div>
         <div class="header-right">
             <div class="header-shape"></div>
