--- a/bugg2.html
+++ b/bugg2.html
@@ -737,7 +737,7 @@
                         
                         <div class="bug-actions">
                             <a href="#" class="btn btn-primary">Investigate</a>
-                        </div>
+                        </div>c
                     </div>
                 </div>
                 
